--- a/release/SFMT19937/howto-compile.html
+++ b/release/SFMT19937/howto-compile.html
@@ -7,7 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html" />
     <title>How to compile SFMT</title>
     <style type="text/css">
-      BLOCKQUOTE {background-color:#a0ffa0}
+      BLOCKQUOTE {background-color:#a0ffa0;
+                  padding-left: 1em;}
     </style>
   </head>
   <body>
@@ -51,10 +52,32 @@
     </blockquote>
     <p>
       You will see many random numbers displayed on your screen.
+      If you want to check these random numbers are correct output,
+      redirect output to a file and <strong>diff</strong> it with
+      <strong>sfmt19937-32.out.txt</strong>, like this:</p>
+    <blockquote>
+      <pre>./test-std32 > foo.txt
+diff -w foo.txt sfmt19937-32.out.txt</pre>
+    </blockquote>
+    <p>
+      Silence means they are the same because <strong>diff</strong>
+      reports the diffrence of two file.
+    </p>
+    <p>
       If you want to know the generation speed of SFMT, type
     </p>
     <blockquote>
       <pre>./test-std32 -s</pre>
+    </blockquote>
+    <p>
+      It is very slow. To make it fast, compile it
+      with <strong>-O3</strong> option. If your compiler is gcc, you
+      should specify <strong>-fno-strict-aliasing</strong> option
+      with <strong>-O3</strong>. type
+    </p>
+    <blockquote>
+      <pre>gcc -O3 -fno-strict-aliasing -o test-std32 test32.c
+./test-std32 -s</pre>
     </blockquote>
 
     <h4>1-2. Compile SSE2 test program.</h4>
@@ -63,7 +86,7 @@
       you can make test-sse32. To do this, type
     </p>
     <blockquote>
-      <pre>make test-sse32</pre>
+      <pre>make SYSTEM=sse2_uinx test-sse32</pre>
     </blockquote>
     <p>or type</p>
     <blockquote>
@@ -82,7 +105,7 @@
       do this, type
     </p>
     <blockquote>
-      <pre>make test-alti32</pre>
+      <pre>make SYSTEM=ppc_osx test-alti32</pre>
     </blockquote>
     <p>or type</p>
     <blockquote>
@@ -94,12 +117,33 @@
     </blockquote>
     <p>shows much shorter time than <strong>test-std32 -s</strong>.</p>
 
+    <h4>1-4. Compile and check output automatically.</h4>
+    <p>
+      To make test program and check 32-bit and 64-bit output
+      automatically, type
+    </p>
+    <blockquote>
+      <pre>make check</pre>
+    </blockquote>
+    <p>
+      To check test program optimized for SSE2, type
+    </p>
+    <blockquote>
+      <pre>make SYSTEM=sse2_unix check</pre>
+    </blockquote>
+    <p>
+      To check test program optimized for AltiVec, type
+    </p>
+    <blockquote>
+      <pre>make SYSTEM=ppc_osx check</pre>
+    </blockquote>
+
     <h3>2. Second Step: Use SFMT pseudorandom number generator with
     your C program.</h3>
     <h4>2-1. Use sequential call and static link.</h4>
     <p>
       Here is a very simple program <strong>sample1.c</strong> which
-      calculate PI using Monte-Carlo method.
+      calculates PI using Monte-Carlo method.
     </p>
     <blockquote>
       <pre>
@@ -119,7 +163,7 @@ int main(int argc, char* argv[]) {
     }
     cnt = 0;
     init_gen_rand(seed);
-    for (i = 0; i &lt; 10000; i++) {
+    for (i = 0; i &lt; NUM; i++) {
 	x = genrand_res53();
 	y = genrand_res53();
 	if (x * x + y * y &lt; 1.0) {
@@ -149,7 +193,7 @@ int main(int argc, char* argv[]) {
 
     <h4>2-2. Use block call and static link.</h4>
     <p>
-      Here is <strong>sample2.c</strong> which is modified sample1.c.
+      Here is <strong>sample2.c</strong> which modifies sample1.c.
       The block call <strong>fill_array64</strong> is much faster than
       sequential call, but it needs an aligned memory.
     </p>
@@ -175,12 +219,12 @@ int main(int argc, char* argv[]) {
 #ifdef __APPLE__
     array = malloc(sizeof(uint64_t) * R_SIZE);
     if (array == NULL) {
-	printf("can't allocate memory.");
+	printf("can't allocate memory.\n");
 	return 1;
     }
 #else
     if (posix_memalign(&amp;array, 16, sizeof(uint64_t) * R_SIZE) != 0) {
-	printf("can't allocate memory.");
+	printf("can't allocate memory.\n");
 	return 1;
     }
 #endif
@@ -188,7 +232,7 @@ int main(int argc, char* argv[]) {
     j = 0;
     init_gen_rand(seed);
     fill_array64(array, R_SIZE);
-    for (i = 0; i &lt; 10000; i++) {
+    for (i = 0; i &lt; NUM; i++) {
 	x = to_res53(array[j++]);
 	y = to_res53(array[j++]);
 	if (x * x + y * y &lt; 1.0) {
@@ -250,7 +294,7 @@ int main(int argc, char* argv[]) {
     }
     cnt = 0;
     init_gen_rand(seed);
-    for (i = 0; i &lt; 10000; i++) {
+    for (i = 0; i &lt; NUM; i++) {
 	x = genrand_res53();
 	y = genrand_res53();
 	if (x * x + y * y &lt; 1.0) {
